Leve cambio en descripción de tercer cargo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="accordion-body">
               <ul>
                 <li>Creación, edición y reenvío de hojas de cálculo y documentos.</li>
-                <li>Diseñé un sistema de archivo optimizado para la oficina para maximizar la eficiencia.</li>
+                <li>Diseño de sistema de archivo optimizado para la oficina para maximizar la eficiencia.</li>
                 <li>Mantener el inventario de suministros de oficina y pedir nuevos suministros cuando sea necesario.
                 </li>
               </ul>
