cambio de título de la página inicial y modificación de iconos en habilidades

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Alejandro Stuardo</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -222,24 +222,24 @@
       <div class="container text-start">
         <div class="row g-2">
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Flexibilidad y
+            <div class=""><i class="fa fa-thumbs-o-up" style="color: #ab0e03;"></i> Flexibilidad y
               adaptabilidad</div>
           </div>
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Colaboración</div>
+            <div class=""><i class="fa fa-comments-o" style="color: #ab0e03;"></i> Colaboración</div>
           </div>
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Resolución de
+            <div class=""><i class="fa fa-handshake-o" style="color: #ab0e03;"></i> Resolución de
               conflictos</div>
           </div>
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Microsoft Office</div>
+            <div class=""><i class="fa fa-desktop" style="color: #ab0e03;"></i> Microsoft Office</div>
           </div>
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Administración</div>
+            <div class=""><i class="fa fa-file-o" style="color: #ab0e03;"></i> Administración</div>
           </div>
           <div class="col-6">
-            <div class=""><i class="fa-solid fa-greater-than fa-xs" style="color: #ab0e03;"></i> Programación</div>
+            <div class=""><i class="fa fa-code" style="color: #ab0e03;"></i> Programación</div>
           </div>
         </div>
       </div>
